@@ -57,7 +57,6 @@ totest['blank'] = [
 .\" Man page generated from reStructeredText.
 .
 .\" Generated by docutils manpage writer.
-.\" 
 .
 """],
     ]
@@ -142,7 +141,6 @@ Arbitrary field: some text
 .SH COPYRIGHT
 public domain
 .\" Generated by docutils manpage writer.
-.\" 
 .
 """],
     ]
@@ -190,7 +188,6 @@ _
 .UNINDENT
 .UNINDENT
 .\\" Generated by docutils manpage writer.
-.\\" 
 .
 ''']
 ]
@@ -247,7 +244,6 @@ bla bla bla
 bla bla bla
 .UNINDENT
 .\\" Generated by docutils manpage writer.
-.\\" \n\
 ."""],
     ]
 
@@ -291,7 +287,6 @@ Description of Term 1 Description of Term 1 Description of Term 1
 Description of Term 1 Description of Term 1
 .UNINDENT
 .\\" Generated by docutils manpage writer.
-.\\" \n\
 .'''],
     ]
 
